--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e90458a561.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header></header>
@@ -25,8 +26,14 @@
                 <h2 class="card__contact__title">
                     Contactez moi :
                 </h2>
-                <p>Email : julia.coulon@outlook.fr</p>
-                <p>Téléphone : 06 51 56 82 58</p>
+                <p>
+                    <i class="fas fa-envelope"></i>
+                     julia.coulon@outlook.fr
+                </p>
+                <p>
+                    <i class="fas fa-phone-alt"></i>
+                     06 51 56 82 58
+                </p>
             </div>
 
             <p class="card__network">Vous pouvez également me retrouver sur
