--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <p class="card__network">Vous pouvez également me retrouver sur
-                <a href="https://www.instagram.com/">Instagram</a>
+                <a href="https://www.instagram.com/miam_jouly/">Instagram</a>
             </p>
             
         </article>    
