working progress version

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>En cours de création</title>
-    <link href="./style/index.css" rel="stylesheet">
+    <link href="./public/css/index.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e90458a561.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,11 +15,14 @@
    
         <article class="card">
             <h1 class="card__title">Julia Coulon</h1>
+            
+            <span class="card__text">Diététicienne-Nutritionniste
+                Spécialisée en micronutrition et addictologie</span>
 
             <div class="card__maintenance">
-                <img src="./images/Travaux.svg" alt="travaux" >
+                <img src="./public/images/Travaux.svg" alt="travaux" >
                 <h2>Ce site est actuellement en cours de création </h2>
-                <img src="./images/Travaux.svg" alt="travaux" >
+                <img src="./public/images/Travaux.svg" alt="travaux" >
             </div>
 
             <div class="card__contact">
